# greenthumbf

./: README.md
backend/: Cargo.toml  README.md
backend/src/: lib.rs  main.rs  utils.rs
backend/src/api/: activities.rs  mod.rs  subscription.rs  wallet.rs
backend/src/models/: activity.rs  token.rs  user.rs
backend/src/services/: marketplace_service.rs  premium_service.rs  referral_service.rs  wallet_service.rs
contracts/: Cargo.toml  README.md
contracts/src/: greenthumb.rs  marketplace.rs  mod.rs  referral.rs  subscription.rs  token.rs
frontend/: tailwind.config.js
frontend/public/: index.html  styles.css
frontend/src/: App.rs  main.rs
frontend/src/components/: ActivityTracker.rs  CameraSetup.rs  Header.rs  Marketplace.rs  PremiumSubscription.rs  ReferralProgram.rs  WalletConnect.rs
frontend/src/pages/: ActivityPage.rs  HomePage.rs  MarketplacePage.rs  ProfilePage.rs
