[package]
name = "greenthumb_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
solana-client = "1.10.32"
solana-sdk = "1.10.32"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"

